# pygendocs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py  testfile.py
.github/workflows/: pipeline.yml  publish.yml
llm/: Dockerfile  README.md  docker-compose.yaml
pygendocs/: __init__.py
src/pygendocs/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  functions.py  git.py  llm.py  utils.py
src/tests/: test_cli.py
