[tool.poetry]
name = "pygendocs"
version = "0.1.0"
description = "Generates missing documentation for python functions in-place using LLMs"
authors = ["mdLafrance <maxlafrance97@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
